--- a/modules/openapi-generator/src/main/resources/python-nextgen/configuration.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/configuration.mustache
@@ -347,7 +347,7 @@ conf = {{{packageName}}}.Configuration(
 
         :param default: object of Configuration
         """
-        cls._default = copy.deepcopy(default)
+        cls._default = default
 
     @classmethod
     def get_default_copy(cls):
@@ -359,9 +359,9 @@ conf = {{{packageName}}}.Configuration(
 
         :return: The configuration object.
         """
-        if cls._default is not None:
-            return copy.deepcopy(cls._default)
-        return Configuration()
+        if cls._default is None:
+            cls._default = Configuration()
+        return cls._default
 
     @property
     def logger_file(self):
