Fix tests for API endpoints without a return type

--- a/modules/openapi-generator/src/main/resources/go/api_test.mustache
+++ b/modules/openapi-generator/src/main/resources/go/api_test.mustache
@@ -39,7 +39,7 @@ func Test_{{packageName}}_{{classname}}Service(t *testing.T) {
 		var {{paramName}} {{{dataType}}}
 		{{/pathParams}}
 
-		resp, httpRes, err := apiClient.{{classname}}.{{operationId}}(context.Background(){{#pathParams}}, {{paramName}}{{/pathParams}}).Execute()
+		{{#returnType}}resp, {{/returnType}}httpRes, err := apiClient.{{classname}}.{{operationId}}(context.Background(){{#pathParams}}, {{paramName}}{{/pathParams}}).Execute()
 
 		require.Nil(t, err)
 		require.NotNil(t, resp)
