--- a/modules/openapi-generator/src/main/resources/python-nextgen/model_test.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/model_test.mustache
@@ -28,21 +28,24 @@ class Test{{classname}}(unittest.TestCase):
             include_option is a boolean, when False only required
             params are included, when True both required and
             optional params are included """
-        # model = {{packageName}}.models.{{classFilename}}.{{classname}}()  # noqa: E501
+        # uncomment below to create an instance of `{{{classname}}}`
+        """
+        model = {{packageName}}.models.{{classFilename}}.{{classname}}()  # noqa: E501
         if include_optional :
             return {{classname}}(
-{{#vars}}
+                {{#vars}}
                 {{name}} = {{{example}}}{{^example}}None{{/example}}{{^-last}}, {{/-last}}
-{{/vars}}
+                {{/vars}}
             )
         else :
             return {{classname}}(
-{{#vars}}
-{{#required}}
+                {{#vars}}
+                {{#required}}
                 {{name}} = {{{example}}}{{^example}}None{{/example}},
-{{/required}}
-{{/vars}}
+                {{/required}}
+                {{/vars}}
         )
+        """
 {{/isEnum}}
 
     def test{{classname}}(self):
