--- a/modules/openapi-generator/src/main/resources/python-nextgen/api.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api.mustache
@@ -111,29 +111,29 @@ class {{classname}}(object):
         """
 
         {{#servers.0}}
-        local_var_hosts = [
+        _hosts = [
 {{#servers}}
             '{{{url}}}'{{^-last}},{{/-last}}
 {{/servers}}
         ]
-        local_var_host = local_var_hosts[0]
+        _host = _hosts[0]
         if kwargs.get('_host_index'):
             _host_index = int(kwargs.get('_host_index'))
-            if _host_index < 0 or _host_index >= len(local_var_hosts):
+            if _host_index < 0 or _host_index >= len(_hosts):
                 raise ApiValueError(
                     "Invalid host index. Must be 0 <= index < %s"
-                    % len(local_var_host)
+                    % len(_host)
                 )
-            local_var_host = local_var_hosts[_host_index]
+            _host = _hosts[_host_index]
         {{/servers.0}}
-        local_var_params = locals()
+        _params = locals()
 
-        all_params = [
+        _all_params = [
 {{#allParams}}
             '{{paramName}}'{{^-last}},{{/-last}}
 {{/allParams}}
         ]
-        all_params.extend(
+        _all_params.extend(
             [
                 'async_req',
                 '_return_http_data_only',
@@ -145,81 +145,81 @@ class {{classname}}(object):
             ]
         )
 
-        for key, val in local_var_params['kwargs'].items():
-            if key not in all_params{{#servers.0}} and key != "_host_index"{{/servers.0}}:
+        for _key, _val in _params['kwargs'].items():
+            if _key not in _all_params{{#servers.0}} and _key != "_host_index"{{/servers.0}}:
                 raise ApiTypeError(
                     "Got an unexpected keyword argument '%s'"
                     " to method {{operationId}}" % key
                 )
-            local_var_params[key] = val
-        del local_var_params['kwargs']
+            _params[_key] = _val
+        del _params['kwargs']
 
-        collection_formats = {}
+        _collection_formats = {}
 
-        path_params = {}
+        _path_params = {}
 {{#pathParams}}
-        if local_var_params['{{paramName}}']:
-            path_params['{{baseName}}'] = local_var_params['{{paramName}}']{{#isArray}}
-            collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}
+        if _params['{{paramName}}']:
+            _path_params['{{baseName}}'] = _params['{{paramName}}']{{#isArray}}
+            _collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}
 {{/pathParams}}
 
-        query_params = []
+        _query_params = []
 {{#queryParams}}
-        if local_var_params.get('{{paramName}}') is not None:  # noqa: E501
-            query_params.append(('{{baseName}}', local_var_params['{{paramName}}'])){{#isArray}}
-            collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}
+        if _params.get('{{paramName}}') is not None:  # noqa: E501
+            _query_params.append(('{{baseName}}', _params['{{paramName}}'])){{#isArray}}
+            _collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}
 {{/queryParams}}
 
-        header_params = dict(local_var_params.get('_headers', {}))
+        _header_params = dict(_params.get('_headers', {}))
 {{#headerParams}}
-        if local_var_params['{{paramName}}']:
-            header_params['{{baseName}}'] = local_var_params['{{paramName}}']{{#isArray}}
-            collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}
+        if _params['{{paramName}}']:
+            _header_params['{{baseName}}'] = _params['{{paramName}}']{{#isArray}}
+            _collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isArray}}
 {{/headerParams}}
 
-        form_params = []
-        local_var_files = {}
+        _form_params = []
+        _files = {}
 {{#formParams}}
-        if local_var_params['{{paramName}}']:
+        if _params['{{paramName}}']:
             {{^isFile}}
-            form_params.append(('{{baseName}}', local_var_params['{{paramName}}']))
+            _form_params.append(('{{baseName}}', _params['{{paramName}}']))
             {{/isFile}}
             {{#isFile}}
-            local_var_files['{{baseName}}'] = local_var_params['{{paramName}}']
+            _files['{{baseName}}'] = _params['{{paramName}}']
             {{/isFile}}
             {{#isArray}}
-            collection_formats['{{baseName}}'] = '{{collectionFormat}}'
+            _collection_formats['{{baseName}}'] = '{{collectionFormat}}'
             {{/isArray}}
 {{/formParams}}
 
-        body_params = None
+        _body_params = None
 {{#bodyParam}}
-        if local_var_params['{{paramName}}']:
-            body_params = local_var_params['{{paramName}}']
+        if _params['{{paramName}}']:
+            _body_params = _params['{{paramName}}']
 {{/bodyParam}}
 
         {{#hasProduces}}
         # HTTP header `Accept`
-        header_params['Accept'] = self.api_client.select_header_accept(
+        _header_params['Accept'] = self.api_client.select_header_accept(
             [{{#produces}}'{{{mediaType}}}'{{^-last}}, {{/-last}}{{/produces}}])  # noqa: E501
 
         {{/hasProduces}}
         {{#hasConsumes}}
         # HTTP header `Content-Type`
-        content_types_list = local_var_params.get('_content_type',
+        _content_types_list = _params.get('_content_type',
             self.api_client.select_header_content_type(
                 [{{#consumes}}'{{{mediaType}}}'{{^-last}}, {{/-last}}{{/consumes}}]))
-        if content_types_list:
-                header_params['Content-Type'] = content_types_list
+        if _content_types_list:
+                _header_params['Content-Type'] = _content_types_list
 
         {{/hasConsumes}}
         # Authentication setting
-        auth_settings = [{{#authMethods}}'{{name}}'{{^-last}}, {{/-last}}{{/authMethods}}]  # noqa: E501
+        _auth_settings = [{{#authMethods}}'{{name}}'{{^-last}}, {{/-last}}{{/authMethods}}]  # noqa: E501
 
         {{#returnType}}
         {{#responses}}
         {{#-first}}
-        response_types_map = {
+        _response_types_map = {
         {{/-first}}
             {{^isWildcard}}
             {{code}}: {{#dataType}}"{{.}}"{{/dataType}}{{^dataType}}None{{/dataType}},
@@ -230,27 +230,27 @@ class {{classname}}(object):
         {{/responses}}
         {{/returnType}}
         {{^returnType}}
-        response_types_map = {}
+        _response_types_map = {}
         {{/returnType}}
 
         return self.api_client.call_api(
             '{{{path}}}', '{{httpMethod}}',
-            path_params,
-            query_params,
-            header_params,
-            body=body_params,
-            post_params=form_params,
-            files=local_var_files,
-            response_types_map=response_types_map,
-            auth_settings=auth_settings,
-            async_req=local_var_params.get('async_req'),
-            _return_http_data_only=local_var_params.get('_return_http_data_only'),  # noqa: E501
-            _preload_content=local_var_params.get('_preload_content', True),
-            _request_timeout=local_var_params.get('_request_timeout'),
+            _path_params,
+            _query_params,
+            _header_params,
+            body=_body_params,
+            post_params=_form_params,
+            files=_files,
+            response_types_map=_response_types_map,
+            auth_settings=_auth_settings,
+            async_req=_params.get('async_req'),
+            _return_http_data_only=_params.get('_return_http_data_only'),  # noqa: E501
+            _preload_content=_params.get('_preload_content', True),
+            _request_timeout=_params.get('_request_timeout'),
             {{#servers.0}}
-            _host=local_var_host,
+            _host=_host,
             {{/servers.0}}
-            collection_formats=collection_formats,
-            _request_auth=local_var_params.get('_request_auth'))
+            collection_formats=_collection_formats,
+            _request_auth=_params.get('_request_auth'))
 {{/operation}}
 {{/operations}}
