--- a/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
@@ -674,7 +674,7 @@ class ApiClient(object):
                 # that are calculated dynamically.
                 signing_info = self.configuration.signing_info
                 auth_headers = signing_info.get_http_signature_headers(
-                resource_path, method, headers, body, querys)
+                resource_path, method, headers, body, queries)
                 headers.update(auth_headers)
             {{/hasHttpSignatureMethods}}
         elif auth_setting['in'] == 'query':
