--- a/modules/openapi-generator/src/main/resources/go/client.mustache
+++ b/modules/openapi-generator/src/main/resources/go/client.mustache
@@ -147,10 +147,16 @@ func parameterToString(obj interface{}, collectionFormat string) string {
 		delimiter = ","
 	}
 
-	if reflect.TypeOf(obj).Kind() == reflect.Slice {
+	objType := reflect.TypeOf(obj)
+	switch objType.Kind() {
+	case reflect.Slice:
 		return strings.Trim(strings.Replace(fmt.Sprint(obj), " ", delimiter, -1), "[]")
-	} else if t, ok := obj.(time.Time); ok {
-		return t.Format(time.RFC3339)
+	case reflect.Ptr:
+		return fmt.Sprintf("%v", reflect.ValueOf(obj).Elem().Interface())
+	default:
+		if t, ok := obj.(time.Time); ok {
+			return t.Format(time.RFC3339)
+		}
 	}
 
 	return fmt.Sprintf("%v", obj)
