Add the rest of the generated test fix

--- a/modules/openapi-generator/src/main/resources/go/api_test.mustache
+++ b/modules/openapi-generator/src/main/resources/go/api_test.mustache
@@ -42,7 +42,9 @@ func Test_{{packageName}}_{{classname}}Service(t *testing.T) {
 		{{#returnType}}resp, {{/returnType}}httpRes, err := apiClient.{{classname}}.{{operationId}}(context.Background(){{#pathParams}}, {{paramName}}{{/pathParams}}).Execute()
 
 		require.Nil(t, err)
+		{{#returnType}}
 		require.NotNil(t, resp)
+		{{/returnType}}
 		assert.Equal(t, 200, httpRes.StatusCode)
 
 	})
