--- a/modules/openapi-generator/src/main/resources/r/modelGeneric.mustache
+++ b/modules/openapi-generator/src/main/resources/r/modelGeneric.mustache
@@ -323,14 +323,14 @@
           {{#isContainer}}
           {{#isArray}}
           {{#isPrimitiveType}}
-             {{#isNumeric}}[%d]{{/isNumeric}}{{^isNumeric}}[%s]{{/isNumeric}}
+             {{#isNumeric}}{{#isInteger}}[%d]{{/isInteger}}{{#isLong}}[%d]{{/isLong}}{{#isNumber}}[%f]{{/isNumber}}{{#isFloat}}[%f]{{/isFloat}}{{#isDouble}}[%f]{{/isDouble}}{{/isNumeric}}{{^isNumeric}}[%s]{{/isNumeric}}
           {{/isPrimitiveType}}
           {{^isPrimitiveType}}[%s]
           {{/isPrimitiveType}}
           {{/isArray}}
           {{#isMap}}
           {{#isPrimitiveType}}
-            {{#isNumeric}}%d{{/isNumeric}}{{^isNumeric}}{{^isBoolean}}"{{/isBoolean}}%s{{^isBoolean}}"{{/isBoolean}}{{/isNumeric}}
+            {{#isNumeric}}{{#isInteger}}%d{{/isInteger}}{{#isLong}}%d{{/isLong}}{{#isNumber}}%f{{/isNumber}}{{#isFloat}}%f{{/isFloat}}{{#isDouble}}%f{{/isDouble}}{{/isNumeric}}{{^isNumeric}}{{^isBoolean}}"{{/isBoolean}}%s{{^isBoolean}}"{{/isBoolean}}{{/isNumeric}}
           {{/isPrimitiveType}}
           {{^isPrimitiveType}}%s
           {{/isPrimitiveType}}
@@ -338,7 +338,7 @@
           {{/isContainer}}
           {{^isContainer}}
           {{#isPrimitiveType}}
-            {{#isNumeric}}%d{{/isNumeric}}{{^isNumeric}}{{^isBoolean}}"{{/isBoolean}}%s{{^isBoolean}}"{{/isBoolean}}{{/isNumeric}}
+            {{#isNumeric}}{{#isInteger}}%d{{/isInteger}}{{#isLong}}%d{{/isLong}}{{#isNumber}}%f{{/isNumber}}{{#isFloat}}%f{{/isFloat}}{{#isDouble}}%f{{/isDouble}}{{/isNumeric}}{{^isNumeric}}{{^isBoolean}}"{{/isBoolean}}%s{{^isBoolean}}"{{/isBoolean}}{{/isNumeric}}
           {{/isPrimitiveType}}
           {{^isPrimitiveType}}%s
           {{/isPrimitiveType}}
